Changes in b49:

- Fixed bug 2026858: Gray terms in OTE after removing parent in Parent Editor.  
Fix is in PathUtil.pathIsCircular:  it doesn't count as a circular path if the
relationship leading to the already-visited child is symmetric (disjoint_from
or inverse of).
- Greatly improved speed of using Parent Editor to add/delete parent
relationships (SF 1963283: Parent Editor is very slow).  It no longer tries to
find and select ALL instances of current term in OTE.
- Bug [ 1989257 ] "Remove redundant links" doesn't work--now fixed.  (May have
been fixed before b49.)
- Closed bug [ 2010574 ] Trim redundant links when integrating XPs.
Can be achieved using global link filters.  The same filter can be
used in combination with "save implied links [for presentation]" to remove
redundant links when implied links are instantiated for release.
- Fixed bug [ 2093464 ] OTE wrongly allows you to delete a term with children.
It wasn't actually letting you delete a term with children; it was letting you
delete a *relationship* in which the term in question was the child, but it
had only that one parent.  Now you are not offered the "delete relationship"
option if the child term has only that one parent, so that removing the
relationship would orphan it.
- Dangling refs now not shown in Graph Editor (they were showing up as little
unlabeled root nodes)--this is part (a) of bug 2001942.
- Fixed bug 2013594: dangling IDs result in "! null" comments

New features:
- [ 2086577 ] add parent to filter menu
Added "Parent" to pulldown list in advanced options in search panel (click the
gear icon) - enables searching for terms with a given parent.

To Do:
- Documentation for Parent search panel option with examples
- Documentation for setting up global link filter to remove redundant links display from OTE